--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -20,19 +20,42 @@
         android:layout_gravity="center"
         android:orientation="vertical" >
 
+
+
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text="Scan Barcode"
             android:textColor="@android:color/white"
             android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:id="@+id/textView"/>
+        <Button
+            android:layout_below="@id/textView"
+            android:id="@+id/btn_album_scan"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:text="图库"
+            android:background="#ffffff"
+            android:textSize="15sp"
             android:textStyle="bold" />
-
+        <Switch
+            android:id="@+id/btn_open_flash"
+            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:textSize="15sp"
+            android:layout_toRightOf="@id/btn_album_scan"
+            android:backgroundTint="@color/encode_view"
+            android:textOff="打开闪光灯"
+            android:textOn="关闭闪光灯"
+            android:background="#ffffff"
+            android:textStyle="bold"
+            android:layout_below="@id/textView"
+         />
         <Button
             android:id="@+id/btn_cancel_scan"
             android:layout_width="230dp"
@@ -42,26 +65,6 @@
             android:text="Cancel"
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
-            android:textStyle="bold" />
-        <Button
-            android:id="@+id/btn_album_scan"
-            android:layout_width="230dp"
-            android:layout_height="40dp"
-            android:text="图库"
-            android:layout_alignBaseline="@+id/btn_cancel_scan"
-            android:layout_toRightOf="@id/btn_cancel_scan"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-        <Switch
-            android:id="@+id/btn_open_flash"
-            android:layout_height="40dp"
-            android:layout_width="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:textSize="15sp"
-            android:textOff="打开闪光灯"
-            android:textOn="关闭闪光灯"
-            android:background="#ffffff"
             android:textStyle="bold" />
 
         
