--- a/handle/src/main/res/layout/activity_main.xml
+++ b/handle/src/main/res/layout/activity_main.xml
@@ -8,12 +8,16 @@
     <Button
         android:id="@+id/download"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="测试"
+        />
 
     <TextView
         android:id="@+id/my_test"
         android:layout_below="@id/download"
         android:text="@string/hello_world"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
