使用属性动画横向

--- a/weather_animation/src/main/res/layout/qing.xml
+++ b/weather_animation/src/main/res/layout/qing.xml
@@ -11,6 +11,7 @@
         android:background="@drawable/fine_day_cloud1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:onClick="rotateyAnimRun"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="97dp"/>
     <ImageView
