--- a/weather_animation/src/main/res/layout/activity_main.xml
+++ b/weather_animation/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
                 android:id="@+id/weather_listView"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                android:padding="10dp"
                 />
 
         </LinearLayout>
