--- a/pink_lbs_test/src/main/res/layout/activity_selesct_poi.xml
+++ b/pink_lbs_test/src/main/res/layout/activity_selesct_poi.xml
@@ -9,9 +9,31 @@
         android:id="@+id/test_location2_0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
         android:layout_gravity="center_horizontal"
+        android:text="@string/hello_world"
         />
+
+    <RadioGroup
+        android:id="@+id/radio_adress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/gecoderAdress"
+            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
+            android:text="地理编码"
+            android:layout_height="wrap_content"/>
+
+        <RadioButton
+            android:id="@+id/regeocodeAdress"
+            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
+            android:text="逆地理编码"
+            android:layout_height="wrap_content"/>
+    </RadioGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,28 +42,32 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:orientation="vertical">
+
         <EditText
             android:id="@+id/test_poi"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
             />
+
         <ProgressBar
             android:id="@+id/progressBar"
+            style="@style/Base.Widget.AppCompat.ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            style="@style/Base.Widget.AppCompat.ProgressBar"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:visibility="visible"/>
+
         <TextView
             android:id="@+id/is_search_POI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="正在搜索附近地址"
-            android:visibility="visible"
-            android:layout_gravity="center_horizontal"/>
+            android:visibility="visible"/>
+
         <ListView
             android:id="@+id/poi_list"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"/>
