--- a/pink_lbs_test/src/main/res/layout/poi_list_item.xml
+++ b/pink_lbs_test/src/main/res/layout/poi_list_item.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="fill_parent"
+              android:layout_height="100dp"
+              android:background="@color/light_blue"
               android:orientation="vertical">
 
     <TextView
         android:id="@+id/addressShort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="test"/>
 
     <TextView
         android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="test"/>
 </LinearLayout>
