--- a/pink_lbs_test/src/main/res/layout/activity_main.xml
+++ b/pink_lbs_test/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -8,7 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1_4"
-        android:layout_weight="1"
         android:id="@+id/button"/>
 
     <Button
@@ -16,7 +15,14 @@
         android:layout_height="wrap_content"
         android:text="2_0"
         android:id="@+id/button2"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"/>
+        />
+    <TextView
+        android:id="@+id/test1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#f0bfff"
+        android:background="@color/light_blue"
+        />
+
 
 </LinearLayout>
