--- a/pink_lbs_test/src/main/res/layout/activity_main.xml
+++ b/pink_lbs_test/src/main/res/layout/activity_main.xml
@@ -16,6 +16,11 @@
         android:text="2_0"
         android:id="@+id/button2"
         />
+
+    <Button
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/test1"
         android:layout_width="fill_parent"
