--- a/myview/src/main/res/drawable/po_seekbar.xml
+++ b/myview/src/main/res/drawable/po_seekbar.xml
@@ -3,21 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="#c6c6c6" />
+            <solid android:color="#00c6c6c6" />
         </shape>
     </item>
     <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <solid android:color="#c6c6c6" />
+                <solid android:color="#00c6c6c6" />
             </shape>
         </clip>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#ffffff" />
+                <solid android:color="#00ffffff" />
             </shape>
         </clip>
     </item>
+
 </layer-list>
