--- a/myview/src/main/res/layout/a.xml
+++ b/myview/src/main/res/layout/a.xml
@@ -3,52 +3,50 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#F5F5F5"
-              android:orientation="vertical" >
+              android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
-        <com.example.administrator.myview.seekbar.MoveLayout
+        <RelativeLayout
             android:id="@+id/textLayout"
             android:layout_width="80dp"
             android:layout_height="60dp"
-            android:background="@drawable/ic_launcher"/>
+            android:background="@drawable/ic_launcher"
+            android:orientation="horizontal"
+            >
 
-        <SeekBar
-            android:id="@+id/seekbar"
+            <ImageView
+                android:id="@+id/testIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/seekbar_thumb"
+                />
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:maxHeight="4dp"
-            android:minHeight="4dp"
-            android:paddingLeft="5dp"
-            android:layout_below="@id/textLayout"
-            android:paddingRight="5dp"
-            android:progressDrawable="@drawable/po_seekbar"
-            android:thumb="@drawable/aaaaa" />
-    </RelativeLayout>
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/progress"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/start_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="14dp"
-            android:textColor="#959595" />
-
-        <TextView
-            android:id="@+id/end_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="14dp"
-            android:textColor="#959595" />
-    </RelativeLayout>
+            <SeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textLayout"
+                android:focusable="true"
+                android:maxHeight="4dp"
+                android:minHeight="4dp"
+                android:progressDrawable="@drawable/po_seekbar"
+                android:thumb="@drawable/seekbar_thumb"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
