--- a/myview/src/main/res/layout/a.xml
+++ b/myview/src/main/res/layout/a.xml
@@ -1,52 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
               android:background="#F5F5F5"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:orientation="horizontal">
 
         <RelativeLayout
             android:id="@+id/textLayout"
             android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:background="@drawable/ic_launcher"
+            android:layout_height="86.66dp"
+            android:background="@drawable/mense_mood_select"
             android:orientation="horizontal"
             >
 
             <ImageView
                 android:id="@+id/testIV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="55.55dp"
+                android:layout_height="50.5dp"
                 android:layout_centerInParent="true"
                 android:src="@drawable/seekbar_thumb"
                 />
         </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sssss"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/bad"
+            android:layout_width="54dp"
+            android:layout_height="41dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/ic_launcher"/>
 
         <LinearLayout
+            android:id="@+id/hahha"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
             android:background="@drawable/progress"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:gravity="center_vertical"
+            >
 
             <SeekBar
                 android:id="@+id/seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textLayout"
                 android:focusable="true"
-                android:maxHeight="4dp"
-                android:minHeight="4dp"
                 android:progressDrawable="@drawable/po_seekbar"
-                android:thumb="@drawable/seekbar_thumb"/>
+                />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/happy"
+            android:layout_width="54dp"
+            android:layout_height="41dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/ic_launcher"/>
     </LinearLayout>
 
 </LinearLayout>
+
+
