--- a/myview/src/main/res/layout/a.xml
+++ b/myview/src/main/res/layout/a.xml
@@ -6,10 +6,11 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/menses_mood_top"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -21,7 +22,7 @@
             >
 
             <ImageView
-                android:id="@+id/testIV"
+                android:id="@+id/menses_mood_select"
                 android:layout_width="55.55dp"
                 android:layout_height="50.5dp"
                 android:layout_centerInParent="true"
@@ -35,7 +36,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp">
+        >
 
         <ImageView
             android:id="@+id/bad"
@@ -46,10 +47,11 @@
             android:src="@drawable/ic_launcher"/>
 
         <LinearLayout
-            android:id="@+id/hahha"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="8"
+            android:layout_marginRight="9dp"
+            android:layout_marginLeft="9dp"
             android:background="@drawable/progress"
             android:gravity="center_vertical"
             >
@@ -59,7 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusable="true"
-                android:progressDrawable="@drawable/po_seekbar"
+                android:thumb="@drawable/aaass"
+                android:progressDrawable="@drawable/menses_seekbar_style"
                 />
         </LinearLayout>
 
