--- a/myview/src/main/res/layout/b.xml
+++ b/myview/src/main/res/layout/b.xml
@@ -4,49 +4,55 @@
               android:layout_height="match_parent"
               android:background="#F5F5F5"
               android:orientation="vertical" >
-
     <LinearLayout
+        android:id="@+id/top"
+        android:orientation="horizontal"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/move"
+            android:layout_width="80dp"
+            android:background="@drawable/mense_mood_select"
+
+            android:layout_height="86.6dp">
+            <ImageView
+                android:id="@+id/select"
+                android:layout_centerInParent="true"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/aaaaa"/>
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
+    <LinearLayout
+
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <com.example.administrator.myview.seekbar.MoveLayout
-            android:id="@+id/textLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="40dp" />
-
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/start"
+            android:layout_width="54dp"
+            android:layout_height="41dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_launcher"
+            />
         <SeekBar
-            android:id="@+id/seekbar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:maxHeight="4dp"
-            android:minHeight="4dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:progressDrawable="@drawable/menses_seekbar_style"
-            android:thumb="@drawable/aaaaa" />
+            android:id="@+id/mySeekBar"
+            android:layout_weight="8"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="54dp"
+            android:src="@drawable/ic_launcher"
+            android:layout_height="41dp"/>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/start_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="14dp"
-            android:textColor="#959595" />
-
-        <TextView
-            android:id="@+id/end_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="14dp"
-            android:textColor="#959595" />
-    </RelativeLayout>
 
 </LinearLayout>
